--- a/src/main/resources/fxml/CopyScreen.fxml
+++ b/src/main/resources/fxml/CopyScreen.fxml
@@ -33,8 +33,9 @@
                                  </children>
                               </Group>
                               <Button fx:id="backToMainScreenButton" layoutX="343.0" layoutY="116.0" mnemonicParsing="false" onAction="#backToMainScreen" prefHeight="58.0" prefWidth="145.0" text="Back to menu" />
-                              <ProgressBar layoutX="112.0" layoutY="236.0" prefHeight="25.0" prefWidth="373.0" progress="0.0" />
-                              <ProgressIndicator layoutX="256.0" layoutY="185.0" prefHeight="44.0" prefWidth="84.0" progress="0.0" />
+                              <ProgressBar fx:id="percentageBar" layoutX="112.0" layoutY="236.0" prefHeight="25.0" prefWidth="373.0" progress="0.0" />
+                              <ProgressIndicator fx:id="percentageGraphic" layoutX="256.0" layoutY="185.0" prefHeight="44.0" prefWidth="84.0" progress="0.0" />
+                              <Label fx:id="percentuale" layoutX="28.0" layoutY="133.0" text="Label" />
                            </children>
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
