--- a/src/main/resources/fxml/CopyScreen.fxml
+++ b/src/main/resources/fxml/CopyScreen.fxml
@@ -15,11 +15,11 @@
                     <items>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                            <children>
-                              <TextField fx:id="sourcePathTextField" layoutX="113.0" layoutY="21.0" />
+                              <TextField fx:id="sourcePathTextField" editable="false" layoutX="113.0" layoutY="21.0" />
                               <Button fx:id="chooseSourcePathButton" layoutX="298.0" layoutY="21.0" mnemonicParsing="false" onAction="#chooseSourcePath" prefHeight="25.0" prefWidth="110.0" text="Choose path" />
                               <Label layoutX="14.0" layoutY="26.0" text="Source path:" />
                               <Label layoutX="14.0" layoutY="59.0" prefHeight="15.0" prefWidth="84.0" text="Target path:" />
-                              <TextField id="targetPathTextField" fx:id="targetPathTextField" layoutX="113.0" layoutY="54.0" />
+                              <TextField id="targetPathTextField" fx:id="targetPathTextField" editable="false" layoutX="113.0" layoutY="54.0" />
                               <Button fx:id="chooseTargetPathButton" layoutX="298.0" layoutY="54.0" mnemonicParsing="false" onAction="#chooseTargetPath" prefHeight="25.0" prefWidth="110.0" text="Choose path" />
                               <Button fx:id="startCopyButton" layoutX="114.0" layoutY="117.0" mnemonicParsing="false" onAction="#startCopy" prefHeight="58.0" prefWidth="145.0" text="Start Copy" />
                               <Group layoutX="-17.0" layoutY="-1.0">
